--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -13,3 +13,41 @@
   font-size: 1.5em;
 }
 
+img {
+  height:200px;
+  width: 200px;
+}
+
+.gallery {
+  display: flex;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+}
+
+.photo-container{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 20px;
+}
+
+button {
+  margin: 20px;
+}
+
+.photo-container {
+  /* display: flex;
+  justify-content: center;
+  align-items: center; */
+  width: 200px;
+  height: 200px;
+}
+.photo-text {
+  font-size: 15vw;
+  font-weight: bold;
+  font-family: Roboto, 'Helvetica Neue', Arial, sans-serif;
+  color: #000;
+  background: #fff;
+  mix-blend-mode: lighten;
+}
